Update style and contact

--- a/contact.html
+++ b/contact.html
@@ -22,35 +22,22 @@
   </header>
 
   <main class="container">
-    <section class="welcome">
-      <h2>Get in Touch</h2>
-      <p>Have questions about the lake or upcoming events? Reach out with the contact form below:</p>
-    </section>
+  <section id="contact" class="contact">
+    <h2>Get in Touch</h2>
+    <p>Have questions about the lake or upcoming events? Reach out by email with the link below, or message our Facebook group.</p>
 
-    <section>
-      <article class="events">
-        <h3>Contact Information</h3>
-        <p><strong>Email:</strong> <a href="mailto:jim@fairhart.com"></a></p>
-      </article>
+    <p>
+      <a class="btn"
+        href="mailto:jim@fairhart.com,eric@ericthom.ca?subject=Fortescue%20Lake%20Inquiry&body=Name%3A%20%0D%0AEmail%3A%20%0D%0A%0D%0AMessage%3A%0D%0A">
+        Email the Association
+      </a>
 
-      <article class="events">
-        <h3>Send Us a Message</h3>
-        <form action="mailto:bceagan@gmail.com"
-              method="post"
-              enctype="text/plain">
-          <label for="name">Name</label><br>
-          <input id="name" name="name" required><br>
-
-          <label for="email">Email</label><br>
-          <input type="email" id="email" name="email" required><br>
-
-          <label for="message">Message</label><br>
-          <textarea id="message" name="message" rows="5" required></textarea><br>
-
-          <button type="submit">Send Message</button>
-        </form>
-      </article>
-    </section>
+      <a class="btn"
+        href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
+        Access the Facebook Group
+      </a>
+    </p>
+  </section>
   </main>
 
   <footer>
