--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Welcome to Fortescue Lake</h2>
       <p class="lead">
         Fortescue Lake is a spring-fed gem straddling the Haliburton&nbsp;/ Peterborough County
-        line within Kawartha Highlands Provincial Park. With its clear water, rugged Canadian
+        line, just east of Kawartha Highlands Provincial Park. With its clear water, rugged Canadian
         Shield scenery, and friendly cottage community, the lake offers an ideal escape for
         outdoor enthusiasts and families alike.
       </p>
