Less cheese more facts

--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
 
 <main class="container">
   <section>
-    <h2>Upcoming Events</h2>
+    <h2>Upcoming Meetings</h2>
     <ul>
       <li>
         <strong>Aug&nbsp;2 – 3, 2025 — Annual General Meeting (AGM)</strong><br>
@@ -36,6 +36,21 @@
       <!-- Add more events below as needed -->
     </ul>
     <p>Check back for any schedule changes, or join our <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank">private Facebook group</a> for real-time updates.</p>
+  </section>
+
+  <section>
+    <h2>
+      Local Event Listings
+    </h2>
+        <dd>
+      <ul>
+        <li><a href="https://www.trentlakes.ca/play/community-activities/" target="_blank" rel="noopener">Trent Lakes Community Activities &amp; Events</a></li>
+        <li><a href="https://myhaliburtonhighlands.com/whats-happening/" target="_blank" rel="noopener">Haliburton Highlands Events Calendar</a></li>
+        <li><a href="https://calendar.mindenhills.ca/" target="_blank" rel="noopener">Minden Hills Events Calendar</a></li>
+        <li><a href="https://canoefm.com/canoe-calendar/" target="_blank" rel="noopener">Canoe FM Community Calendar</a></li>
+        <li><a href="https://www.myhaliburtonnow.com/events-list/" target="_blank" rel="noopener">Moose FM Community Events</a></li>
+      </ul>
+    </dd>
   </section>
 </main>
 
