--- a/faq.html
+++ b/faq.html
@@ -48,8 +48,8 @@
 
     <!-- Emergency -->
     <dt>Who do I contact for emergency assistance?</dt>
-    <dd>Dial <strong>911</strong> first. For lake-specific concerns, email the Lake Warden at
-        <a href="mailto:warden@fortescuecottage.ca">warden@fortescuecottage.ca</a>.</dd>
+    <dd>Dial <strong>911</strong> first. For additional emergency services, see 
+        <a href="https://www.trentlakes.ca/live/emergency-services/">the Trent Lakes Website.</a>.</dd>
 
     <!-- Garbage -->
     <dt>How do I dispose of garbage and recycling?</dt>
