--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         When lumbering declined, early homesteads gave way to seasonal cottages. By the 1950s
         improved roads turned Fortescue into a favourite retreat for families seeking the peace
         and quiet of the Kawarthas. In&nbsp;1976 the Fortescue Lake Cottage Association (FLCA)
-        was founded to protect the lake environment and foster community spirit—values that
+        was founded to protect the lake environment and foster community spirit—values. These goals 
         continue to guide us today.
       </p>
     </section>
