Flip to Lake Fortescue standard

--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Fortescue Lake Cottage Association</h1>
+      <h1>Lake Fortescue Cottage Association</h1>
       <nav>
         <ul>
            <li><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
     <dt>Is there a community Facebook group?</dt>
     <dd>Yes! Join the conversation and get real-time updates by joining our private Facebook group:
         <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
-          Fortescue Lake Cottage Association Facebook Group
+          Lake Fortescue Facebook Group
         </a>. Membership is limited to lake residents, cottagers, and their families.</dd>
 
     <!-- Lake Rules -->
