--- a/events.html
+++ b/events.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Events • Fortescue Lake Cottage Association</title>
+  <title>Events • Lake Fortescue Cottage Association</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
     <div class="container">
-      <h1>Fortescue Lake Cottage Association</h1>
+      <h1>Lake Fortescue Cottage Association</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -55,8 +55,8 @@
 </main>
 
 <footer class="container">
-  <p>Fortescue Lake Cottage Association – Trent Lakes, Ontario, Canada</p>
-  <p>&copy; 2025 Fortescue Lake Cottage Association. All rights reserved.</p>
+  <p>Lake Fortescue Cottage Association – Trent Lakes, Ontario, Canada</p>
+  <p>&copy; 2025 Lake Fortescue Cottage Association. All rights reserved.</p>
 </footer>
 
 </body>
