--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home • Fortescue Lake Cottage Association</title>
+  <title>Home • Lake Fortescue Cottage Association</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
     <div class="container">
-      <h1>Fortescue Lake Cottage Association</h1>
+      <h1>Lake Fortescue Cottage Association</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -56,7 +56,7 @@
         Logging brought the first wave of development to the Fortescue area in the late 1800s.
         When lumbering declined, early homesteads gave way to seasonal cottages. By the 1950s
         improved roads turned Fortescue into a favourite retreat for families seeking the peace
-        and quiet of the Kawarthas. In&nbsp;1976 the Fortescue Lake Cottage Association (FLCA)
+        and quiet of the Kawarthas. In&nbsp;1976 the Lake Fortescue Cottage Association (FLCA)
         was founded to protect the lake environment and foster community spirit—values. These goals 
         continue to guide us today.
       </p>
@@ -66,7 +66,7 @@
     <section id="association">
       <h2>About the FLCA</h2>
       <p>
-        The Fortescue Lake Cottage Association is a volunteer-run, non-profit group. We:
+        The Lake Fortescue Cottage Association is a volunteer-run, non-profit group. We:
       </p>
       <ul>
         <li>Monitor and maintain cottage access roads</li>
@@ -82,7 +82,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <p>&copy; Fortescue Lake Cottage Association — established&nbsp;1976. Working together to
+      <p>&copy; Lake Fortescue Cottage Association — established&nbsp;1976. Working together to
          preserve and enjoy our lake for future generations.</p>
     </div>
   </footer>
