--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
 
     <!-- Facebook -->
     <dt>Is there a community Facebook group?</dt>
-    <dd>Yes! Join the conversation and get real-time updates by joining our private Facebook group:
+    <dd>Yes! Join the conversation and get real-time updates by joining our private 
         <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
           Lake Fortescue Facebook Group
         </a>. Membership is limited to lake residents, cottagers, and their families.</dd>
