--- a/events.html
+++ b/events.html
@@ -28,10 +28,16 @@
     <h2>Upcoming Meetings</h2>
     <ul>
       <li>
-        <strong>Aug&nbsp;2 – 3, 2025 — Annual General Meeting (AGM)</strong><br>
-        Location: Randy&rsquo;s cottage (look for the sea plane at the dock).  
+        <strong> COTTAGE ASSOCIATION MEETING </strong>
         <br>Saturday Aug 2: Annual General Meeting  
         <br>Sunday Aug 3: Annual General Meeting (rain-date)
+        <br>
+        Location: Randy&rsquo;s cottage (look for the sea plane at the dock).  
+        <br><br><strong>Questions?</strong> Call Eric @ (705) 300-5531 
+        <br>Come via boat (or car, but parking is limited)
+        <br>Bring a chair.
+        <br> <strong>Your attendance is IMPORTANT!</strong> 
+
       </li>
       <!-- Add more events below as needed -->
     </ul>
