Edits from google doc copy

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Lake Fortescue Cottage Association</h1>
+      <h1>Lake Fortescue Cottagers’ Association</h1>
       <nav>
         <ul>
            <li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Lake Fortescue Cottage Association — established&nbsp;1976. Working together to
+      <p>&copy; Lake Fortescue Cottagers’ Association — established&nbsp;1976. Working together to
          preserve and enjoy our lake for future generations.</p>
     </div>
   </footer>
