--- a/events.html
+++ b/events.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Events • Lake Fortescue Cottage Association</title>
+  <title>Events • Lake Fortescue Cottagers’ Association</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
     <div class="container">
-      <h1>Lake Fortescue Cottage Association</h1>
+      <h1>Lake Fortescue Cottagers’ Association</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -32,7 +32,7 @@
         <br>Saturday Aug 2: Annual General Meeting  
         <br>Sunday Aug 3: Annual General Meeting (rain-date)
         <br>
-        Location: Randy&rsquo;s cottage (look for the sea plane at the dock).  
+        Location: Randy&rsquo;s cottage (look for the seaplane at the dock).  
         <br><br><strong>Questions?</strong> Call Eric @ (705) 300-5531 
         <br>Come via boat (or car, but parking is limited)
         <br>Bring a chair.
@@ -61,8 +61,8 @@
 </main>
 
 <footer class="container">
-  <p>Lake Fortescue Cottage Association – Trent Lakes, Ontario, Canada</p>
-  <p>&copy; 2025 Lake Fortescue Cottage Association. All rights reserved.</p>
+  <p>Lake Fortescue Cottagers’ Association – Trent Lakes, Ontario, Canada</p>
+  <p>&copy; 2025 Lake Fortescue Cottagers’ Association. All rights reserved.</p>
 </footer>
 
 </body>
