--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Lake Fortescue Cottage Association</h1>
+      <h1>Lake Fortescue Cottagers’ Association</h1>
       <nav>
         <ul>
            <li><a href="index.html">Home</a></li>
@@ -32,12 +32,11 @@
 
     <!-- Meetings -->
     <dt>When are monthly meetings held?</dt>
-    <dd>Meetings are held annually, along with semi-regular cleanup and ad-hoc improvement efforts.
-        Please see the <a href="events.html">Events</a> page for dates.</dd>
+    <dd>Meetings are held annually. Please see the <a href="events.html">Events</a> page for dates.</dd>
 
     <!-- Facebook -->
     <dt>Is there a community Facebook group?</dt>
-    <dd>Yes! Join the conversation and get real-time updates by joining our private 
+    <dd>Yes! Join the conversation and get real-time updates by joining our private
         <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
           Lake Fortescue Facebook Group
         </a>. Membership is limited to lake residents, cottagers, and their families.</dd>
@@ -71,18 +70,6 @@
         See the <a href="https://tc.canada.ca/sites/default/files/migrated/tp_511e.pdf" target="_blank" rel="noopener">
         Transport Canada Safe Boating Guide</a>. Remember the 10 km/h limit within 30 m of shore.</dd>
 
-    <!-- Local Events -->
-    <dt>Where can I find local event listings?</dt>
-    <dd>
-      <ul>
-        <li><a href="https://www.trentlakes.ca/play/community-activities/" target="_blank" rel="noopener">Trent Lakes Community Activities &amp; Events</a></li>
-        <li><a href="https://myhaliburtonhighlands.com/whats-happening/" target="_blank" rel="noopener">Haliburton Highlands Events Calendar</a></li>
-        <li><a href="https://calendar.mindenhills.ca/" target="_blank" rel="noopener">Minden Hills Events Calendar</a></li>
-        <li><a href="https://canoefm.com/canoe-calendar/" target="_blank" rel="noopener">Canoe FM Community Calendar</a></li>
-        <li><a href="https://www.myhaliburtonnow.com/events-list/" target="_blank" rel="noopener">Moose FM Community Events</a></li>
-      </ul>
-    </dd>
-
   </dl>
 </section>
 
@@ -91,7 +78,7 @@
   <footer>
     <div class="container">
       <p>&copy; 
-        The FLCA is a non-profit, volunteer organization established in 1976.
+        The LFCA is a non-profit, volunteer organization established in 1976.
         Our goal is to keep members informed and foster discussion on issues affecting Fortescue Lake.
       </p>
     </div>
