--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home • Lake Fortescue Cottage Association</title>
+  <title>Home • Lake Fortescue Cottagers’ Association</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
     <div class="container">
-      <h1>Lake Fortescue Cottage Association</h1>
+      <h1>Lake Fortescue Cottagers’ Association</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -31,7 +31,7 @@
       <p class="lead">
         Fortescue Lake is a spring-fed gem straddling the Haliburton&nbsp;/ Peterborough County
         line, just east of Kawartha Highlands Provincial Park. With its clear water, rugged Canadian
-        Shield scenery, and friendly cottage community, the lake offers an ideal escape for
+        Shield scenery and friendly cottage community, the lake offers an ideal escape for
         outdoor enthusiasts and families alike.
       </p>
     </section>
@@ -56,7 +56,7 @@
         Logging brought the first wave of development to the Fortescue area in the late 1800s.
         When lumbering declined, early homesteads gave way to seasonal cottages. By the 1950s
         improved roads turned Fortescue into a favourite retreat for families seeking the peace
-        and quiet of the Kawarthas. In&nbsp;1976 the Lake Fortescue Cottage Association (FLCA)
+        and quiet of the Kawarthas. In&nbsp;1976 the Lake Fortescue Cottagers’ Association (LFCA)
         was founded to protect the lake environment and foster community spirit—values. These goals 
         continue to guide us today.
       </p>
@@ -64,16 +64,16 @@
 
     <!-- Association -->
     <section id="association">
-      <h2>About the FLCA</h2>
+      <h2>About the LFCA</h2>
       <p>
-        The Lake Fortescue Cottage Association is a volunteer-run, non-profit group. We:
+        The Lake Fortescue Cottagers’ Association is a volunteer-run, non-profit group. We:
       </p>
       <ul>
-        <li>Monitor and maintain cottage access roads</li>
         <li>Monitor water clarity and overall lake health</li>
         <li>Promote natural shoreline and septic-system best practices</li>
         <li>Share news on fire bans, boating rules, and municipal by-laws</li>
-        <li>Organise an annual summer social, shoreline clean-ups, and an AGM</li>
+        <li>Organize an annual AGM</li>
+        <li>Watch for new developments or renovations</li>
         <li>Liaise with the Municipality of Trent Lakes, park staff, and conservation agencies</li>
       </ul>
     </section>
@@ -82,7 +82,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <p>&copy; Lake Fortescue Cottage Association — established&nbsp;1976. Working together to
+      <p>&copy; Lake Fortescue Cottagers’ Association — established&nbsp;1976. Working together to
          preserve and enjoy our lake for future generations.</p>
     </div>
   </footer>
