Add images and update styles

--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,24 @@
   <main class="container">
   <section id="contact" class="contact">
     <h2>Get in Touch</h2>
-    <p>Have questions about the lake or upcoming events? Reach out by email with the link below, or message our Facebook group.</p>
-
-    <p>
+    <p>Have questions about the lake or upcoming events? <br> Reach out by email with the link below, or message our Facebook group.</p>
+    <p class="contact__buttons">
       <a class="btn"
-        href="mailto:jim@fairhart.com,eric@ericthom.ca?subject=Fortescue%20Lake%20Inquiry&body=Name%3A%20%0D%0AEmail%3A%20%0D%0A%0D%0AMessage%3A%0D%0A">
+        href="mailto:jim@…">
         Email the Association
       </a>
-
       <a class="btn"
-        href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
+        href="https://…">
         Access the Facebook Group
       </a>
     </p>
+
+    </section>
+    <section>
+    <figure class="hero-image">
+      <img src="assets/images/sunset-thom.jpg" alt="Fortescue at sunset.">
+      <figcaption>Fortescue at sunset (credit: Eric Thom)</figcaption>
+    </figure>
   </section>
   </main>
 
