--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,10 @@
   <main class="container">
     <!-- FAQ SECTION — single flowing block -->
 <section class="faq">
+
+
   <dl class="faq-list">
+    <h2>Frequently Asked Questions</h2>
 
     <!-- Membership -->
     <dt>How do I become a member?</dt>
@@ -69,8 +72,14 @@
     <dd>All operators need a Pleasure Craft Operator Card and must follow Ontario regulations.
         See the <a href="https://tc.canada.ca/sites/default/files/migrated/tp_511e.pdf" target="_blank" rel="noopener">
         Transport Canada Safe Boating Guide</a>. Remember the 10 km/h limit within 30 m of shore.</dd>
-
   </dl>
+</section>
+<section class="featured‑image">
+    <figure class="hero-image">
+      <img src="assets/images/fortescue-milky-way.jpg" alt="Milky Way rising over Lake Fortescue.">
+      <figcaption>Milky Way rising over Lake Fortescue</figcaption>
+    </figure>
+
 </section>
 
   </main>
