--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
       <!-- Add more events below as needed -->
     </ul>
     <p>Check back for any schedule changes, or join our <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank">private Facebook group</a> for real-time updates.</p>
-  </section>
+  </section>  
 
   <section>
     <h2>
@@ -57,6 +57,13 @@
         <li><a href="https://www.myhaliburtonnow.com/events-list/" target="_blank" rel="noopener">Moose FM Community Events</a></li>
       </ul>
     </dd>
+  </section>
+
+    <section>
+    <figure class="hero-image">
+      <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
+      <figcaption>Loon floating on Lake Fortescue.</figcaption>
+    </figure>
   </section>
 </main>
 
