--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
     <section>
     <figure class="hero-image">
       <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
-      <figcaption>Loon floating on Lake Fortescue.</figcaption>
+      <figcaption>Loon floating on Lake Fortescue (credit: Eric Thom)</figcaption>
     </figure>
   </section>
 </main>
