Correct active highlighting

--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,7 @@
 <section class="featured‑image">
     <figure class="hero-image">
       <img src="assets/images/fortescue-milky-way.jpg" alt="Milky Way rising over Lake Fortescue.">
-      <figcaption>Milky Way rising over Lake Fortescue</figcaption>
+      <figcaption>Milky Way rising over Lake Fortescue (credit: Ben Eagan)</figcaption>
     </figure>
 
 </section>
