--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
       <nav>
         <ul>
            <li><a href="index.html">Home</a></li>
-          <li><a href="faq.html" class="active">FAQ</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
           <li><a href="events.html">Events</a></li>
         </ul>
       </nav>
