--- a/events.html
+++ b/events.html
@@ -13,10 +13,10 @@
       <h1>Lake Fortescue Cottagers’ Association</h1>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html"> Home</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html" class="active">Events</a></li>
         </ul>
       </nav>
     </div>
