Grid layout for hero image and text

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
   </header>
 
   <main class="container">
-  <section id="contact" class="contact">
+  <section id="contact" class="hero-grid">
+    <div class="hero-text">
     <h2>Get in Touch</h2>
     <p>Have questions about the lake or upcoming events? <br> Reach out by email with the link below, or message our Facebook group.</p>
     <p class="contact__buttons">
@@ -35,9 +36,8 @@
         Access the Facebook Group
       </a>
     </p>
+    </div>
 
-    </section>
-    <section>
     <figure class="hero-image">
       <img src="assets/images/sunset-thom.jpg" alt="Fortescue at sunrise.">
       <figcaption>Fortescue at sunrise (credit: Eric Thom)</figcaption>
