--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
   </section>
 
     <section>
-    <figure class="hero-image">
+    <figure class="hero-image-single">
       <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
       <figcaption>Loon floating on Lake Fortescue (credit: Eric Thom)</figcaption>
     </figure>
