--- a/faq.html
+++ b/faq.html
@@ -23,11 +23,13 @@
 
   <main class="container">
     <!-- FAQ SECTION — single flowing block -->
-<section class="faq">
+<section class="hero-grid">
+  <!-- 1: heading -->
+  <h2>Frequently Asked Questions</h2>
 
-
+  <div class="hero-text">
+    <p>Here are some common questions about Lake Fortescue, its community, and regulations. If you have more questions, please reach out via the <a href="contact.html">Contact</a> page.</p>
   <dl class="faq-list">
-    <h2>Frequently Asked Questions</h2>
 
     <!-- Membership -->
     <dt>How do I become a member?</dt>
@@ -73,13 +75,17 @@
         See the <a href="https://tc.canada.ca/sites/default/files/migrated/tp_511e.pdf" target="_blank" rel="noopener">
         Transport Canada Safe Boating Guide</a>. Remember the 10 km/h limit within 30 m of shore.</dd>
   </dl>
-</section>
-<section class="featured‑image">
-    <figure class="hero-image">
-      <img src="assets/images/fortescue-milky-way.jpg" alt="Milky Way rising over Lake Fortescue.">
-      <figcaption>Milky Way rising over Lake Fortescue (credit: Ben Eagan)</figcaption>
-    </figure>
+  </div>
 
+  <figure class="hero-image">
+    <img src="assets/images/fortescue-milky-way.jpg"
+         alt="Milky Way rising over Lake Fortescue.">
+    <figcaption>Milky Way rising over Lake Fortescue (credit: Ben Eagan)</figcaption>
+    <br><br>
+    <img src="assets/images/tortoise-thom.jpg"
+         alt="Snapping Turtle resting on roadside (credit: Eric Thom).">
+    <figcaption>Snapping Turtle resting on roadside (credit: Eric Thom)</figcaption>
+  </figure>
 </section>
 
   </main>
