--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
 
     <!-- Welcome / Hero -->
     <!-- Welcome / Hero with Featured Photo -->
-    <section id="welcome" class="hero‑grid">
+    <section id="welcome" class="hero-grid">
       <!-- left column: text -->
-      <div class="hero‑content">
+      <div class="hero-text">
         <h2>Welcome to Lake Fortescue</h2>
         <p class="lead">
-          Lake Fortescue is a spring‑fed gem straddling the Haliburton / Peterborough County
-          line, just east of Kawartha Highlands Provincial Park. With its clear water, rugged
+          <br>
+          Lake Fortescue is a spring-fed gem straddling the Haliburton / Peterborough County
+          line, just east of Kawartha Highlands Provincial Park. <br><br> With its clear water, rugged
           Canadian Shield scenery and friendly cottage community, the lake offers an ideal escape
           for outdoor enthusiasts and families alike.
         </p>
       </div>
 
-    </section>
-    <section> 
     <figure class="hero-image">
         <img src="assets/images/fortescue-drone-1.jpg" alt="Sunrise over a Foggy Lake Fortescue.">
         <figcaption>Sunrise over a Foggy Lake Fortescue (credit: Ben Eagan)</figcaption>
