Update mobile styling and add more assets

--- a/faq.html
+++ b/faq.html
@@ -82,9 +82,9 @@
          alt="Milky Way rising over Lake Fortescue.">
     <figcaption>Milky Way rising over Lake Fortescue (credit: Ben Eagan)</figcaption>
     <br><br>
-    <img src="assets/images/tortoise-thom.jpg"
-         alt="Snapping Turtle resting on roadside (credit: Eric Thom).">
-    <figcaption>Snapping Turtle resting on roadside (credit: Eric Thom)</figcaption>
+    <img src="assets/images/sunset-thom-2.jpg"
+         alt="Sunset over the lake (credit: Eric Thom).">
+    <figcaption>Sunset over the lake (credit: Eric Thom)</figcaption>
   </figure>
 </section>
 
