Update local spotlight and inline image

--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
     </section>
 
     <section id="local-spotlight">
+      
       <h2>Local Spotlight</h2>
+
+
       <p>
+              
+      <figure class="inline-image">
+        <img src="assets/images/fortescue-hero-poster.jpg" alt="Fortescue film poster.">
+        <figcaption>Poster for Fortescue film (credit: Rebeccah Love)</figcaption>
+      </figure>
+
         <strong>PLACEHOLDER - WILL REPLACE: </strong>
         <br><br>
         Congratulations to Rebeccah Love on completing her debut feature film 
@@ -71,6 +80,8 @@
          <a href="https://www.theglobeandmail.com/arts/film/reviews/article-fortescue-rebeccah-love-female-friendship-illness-artistic-process/" target="_blank" rel="noopener">Globe and Mail Review</a>, or watch the trailer below:
         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1009454730?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Fortescue Trailer"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </p>
+
+
     </section>
 
     <!-- Brief History -->
