More tweaking styles, fix button links

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
     <p>Have questions about the lake or upcoming events? <br> Reach out by email with the link below, or message our Facebook group.</p>
     <p class="contact__buttons">
       <a class="btn"
-        href="mailto:jim@…">
+        href="mailto:jim@fairhart.com,eric@ericthom.ca?subject=Fortescue%20Lake%20Inquiry&body=Name%3A%20%0D%0AEmail%3A%20%0D%0A%0D%0AMessage%3A%0D%0A">
         Email the Association
       </a>
       <a class="btn"
-        href="https://…">
+        href="https://www.facebook.com/groups/LakeFortescue/">
         Access the Facebook Group
       </a>
     </p>
