--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
   <!-- MAIN CONTENT -->
   <main class="container">
 
-    <!-- Welcome / Hero -->
-    <!-- Welcome / Hero with Featured Photo -->
 <section id="welcome">
+           <h1>Welcome to Lake Fortescue</h1>
+
   <div class="hero-grid">
-    <!-- Left Column: Intro and Lake Overview -->
     <div class="hero-text">
-      <h1>Welcome to Lake Fortescue</h1>
       <p>
         Lake Fortescue is a spring-fed gem straddling the Haliburton / Peterborough County
         line, just east of Kawartha Highlands Provincial Park.
@@ -40,9 +38,16 @@
         With its clear water, rugged Canadian Shield scenery and friendly cottage community,
         the lake offers an ideal escape for outdoor enthusiasts and families alike.
       </p>
+    </div>
 
-      <!-- Lake at a Glance beside Intro -->
-      <div id="lake-overview">
+    <!-- Right Column: Hero Image -->
+    <figure class="hero-image">
+      <img src="assets/images/heron-thom.jpg" alt="A blue Heron flies across the lake at dawn (credit: Eric Thom)">
+      <figcaption>A blue Heron flies across the lake at dawn (credit: Eric Thom)</figcaption>
+    </figure>
+  </div>
+
+  <div id="lake-overview">
         <h2>Lake at a Glance</h2>
         <ul>
           <li><strong>Location: </strong> Fortescue Lake is located on the Haliburton / Peterborough County line, south of Irondale.</li>
@@ -53,21 +58,14 @@
           <li><strong>Fisheries Zone: </strong> Provincial Fisheries Management Zone 15</li>
         </ul>
       </div>
-    </div>
 
-    <!-- Right Column: Hero Image -->
-    <figure class="hero-image">
-      <img src="assets/images/heron-thom.jpg" alt="A blue Heron flies across the lake at dawn (credit: Eric Thom)">
-      <figcaption>A blue Heron flies across the lake at dawn (credit: Eric Thom)</figcaption>
-    </figure>
-  </div>
 </section>
 
   <div class="side-by-side">
 
     <div class="text">
-        <h1>Local Spotlight - Fortescue (Film)</h2>
-
+        <h2>Local Spotlight - Fortescue (Film)</h2>
+      <p>      
         The Globe & Mail calls it. “a layered exploration of female friendship, illness and the artistic process”. 
         We call it ‘ours’. Sometimes referred to as ‘the Emily Dickinson of Rosedale’, Fortescue cottager, Writer and Director, Rebeccah Love, has filmed her first feature-length movie using our lake as its backdrop. 
         <br> <br>
@@ -97,7 +95,9 @@
         Logging brought the first wave of development to the Fortescue area in the late 1800s.
         When lumbering declined, early homesteads gave way to seasonal cottages. By the 1950s
         improved roads turned Fortescue into a favourite retreat for families seeking the peace
-        and quiet of the Kawarthas. In&nbsp;1976 the Lake Fortescue Cottagers’ Association (LFCA)
+        and quiet of the Kawarthas. 
+        <br><br> 
+        In&nbsp;1976 the Lake Fortescue Cottagers’ Association (LFCA)
         was founded to protect the lake environment and foster community spirit—values. These goals 
         continue to guide us today.
       </p>
