--- a/events.html
+++ b/events.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Events • Lake Fortescue Cottagers’ Association</title>
   <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Lightbox2 CSS -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
+    rel="stylesheet"
+  >
+
+  <!-- Lightbox2 JS -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js">
+  </script>
+
 </head>
 <body>
   <!-- HEADER -->
@@ -61,7 +73,9 @@
 
     <section>
     <figure class="hero-image-single">
-      <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
+      <a href="assets/images/thom-loon.jpg" data-lightbox="lake" data-title="Loon floating on Lake Fortescue (credit: Eric Thom)">
+        <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
+      </a>
       <figcaption>Loon floating on Lake Fortescue (credit: Eric Thom)</figcaption>
     </figure>
   </section>
