Update LFCA to FLCA, fix lake source info, try nav bar layout, remove caption text except credits

--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,19 @@
 
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Lake Fortescue Cottagers’ Association</h1>
-      <nav>
-        <ul>
-           <li><a href="index.html">Home</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
-          <li><a href="events.html">Events</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div>
+    <h1>Fortescue Lake Cottagers’ Association</h1>
+  </div>
+</header>
+
+<nav class="slim-bar">
+  <a href="index.html">Home</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contact.html" class="active">Contact</a>
+  <a href="events.html" >Events</a>
+</nav>
+
 
   <main class="container">
   <section id="contact" class="hero-grid">
@@ -51,10 +51,10 @@
     </div>
 
 <figure class="hero-image">
-  <a href="assets/images/sunset-thom.jpg" data-lightbox="lake" data-title="Fortescue at sunrise (credit: Eric Thom)">
+  <a href="assets/images/sunset-thom.jpg" data-lightbox="lake" data-title="credit: Eric Thom">
     <img src="assets/images/sunset-thom.jpg" alt="Fortescue at sunrise.">
   </a>
-  <figcaption>Fortescue at sunrise (credit: Eric Thom)</figcaption>
+  <figcaption>credit: Eric Thom</figcaption>
 </figure>
 
   </section>
@@ -62,7 +62,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Lake Fortescue Cottagers’ Association — established&nbsp;1976. Working together to
+      <p>&copy; Fortescue Lake Cottagers’ Association — established&nbsp;1976. Working together to
          preserve and enjoy our lake for future generations.</p>
     </div>
   </footer>
