--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Events • Lake Fortescue Cottagers’ Association</title>
+  <title>Events • Fortescue Lake Cottagers’ Association</title>
   <link rel="stylesheet" href="css/styles.css">
 
     <!-- Lightbox2 CSS -->
@@ -20,19 +20,18 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header>
-    <div class="container">
-      <h1>Lake Fortescue Cottagers’ Association</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html"> Home</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="events.html" class="active">Events</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div>
+    <h1>Fortescue Lake Cottagers’ Association</h1>
+  </div>
+</header>
+
+<nav class="slim-bar">
+  <a href="index.html">Home</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contact.html">Contact</a>
+  <a href="events.html"  class="active">Events</a>
+</nav>
 
 
 <main class="container">
@@ -73,17 +72,17 @@
 
     <section>
     <figure class="hero-image-single">
-      <a href="assets/images/thom-loon.jpg" data-lightbox="lake" data-title="Loon floating on Lake Fortescue (credit: Eric Thom)">
-        <img src="assets/images/thom-loon.jpg" alt="Loon floating on Lake Fortescue.">
+      <a href="assets/images/thom-loon-3.jpg" data-lightbox="lake" data-title="credit: Eric Thom">
+        <img src="assets/images/thom-loon-3.jpg" alt="Loon floating on Fortescue Lake.">
       </a>
-      <figcaption>Loon floating on Lake Fortescue (credit: Eric Thom)</figcaption>
+      <figcaption>credit: Eric Thom</figcaption>
     </figure>
   </section>
 </main>
 
 <footer class="container">
-  <p>Lake Fortescue Cottagers’ Association – Trent Lakes, Ontario, Canada</p>
-  <p>&copy; 2025 Lake Fortescue Cottagers’ Association. All rights reserved.</p>
+  <p>Fortescue Lake Cottagers’ Association – Trent Lakes, Ontario, Canada</p>
+  <p>&copy; 2025 Fortescue Lake Cottagers’ Association. All rights reserved.</p>
 </footer>
 
 </body>
