--- a/faq.html
+++ b/faq.html
@@ -16,22 +16,21 @@
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js">
   </script>
-  
+
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Lake Fortescue Cottagers’ Association</h1>
-      <nav>
-        <ul>
-           <li><a href="index.html">Home</a></li>
-          <li><a href="faq.html" class="active">FAQ</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="events.html">Events</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+ <header>
+  <div>
+    <h1>Fortescue Lake Cottagers’ Association</h1>
+  </div>
+</header>
+
+<nav class="slim-bar">
+  <a href="index.html">Home</a>
+  <a href="faq.html" class="active">FAQ</a>
+  <a href="contact.html">Contact</a>
+  <a href="events.html">Events</a>
+</nav>
 
   <main class="container">
     <!-- FAQ SECTION — single flowing block -->
@@ -40,7 +39,7 @@
   <h2>Frequently Asked Questions</h2>
 
   <div class="hero-text">
-    <p>Here are some common questions about Lake Fortescue, its community, and regulations. If you have more questions, please reach out via the <a href="contact.html">Contact</a> page.</p>
+    <p>Here are some common questions about Fortescue Lake, its community, and regulations. If you have more questions, please reach out via the <a href="contact.html">Contact</a> page.</p>
   <dl class="faq-list">
 
     <!-- Membership -->
@@ -55,7 +54,7 @@
     <dt>Is there a community Facebook group?</dt>
     <dd>Yes! Join the conversation and get real-time updates by joining our private
         <a href="https://www.facebook.com/groups/LakeFortescue/" target="_blank" rel="noopener">
-          Lake Fortescue Facebook Group
+          Fortescue Lake Facebook Group
         </a>. Membership is limited to lake residents, cottagers, and their families.</dd>
 
     <!-- Lake Rules -->
@@ -90,15 +89,15 @@
   </div>
 
   <figure class="hero-image">
-    <a href="assets/images/fortescue-milky-way.jpg" data-lightbox="lake" data-title="Milky Way rising over Lake Fortescue (credit: Ben Eagan)">
-      <img src="assets/images/fortescue-milky-way.jpg" alt="Milky Way rising over Lake Fortescue.">
+    <a href="assets/images/fortescue-milky-way.jpg" data-lightbox="lake" data-title="credit: Ben Eagan">
+      <img src="assets/images/fortescue-milky-way.jpg" alt="Milky Way rising over Fortescue Lake.">
     </a>
-    <figcaption>Milky Way rising over Lake Fortescue (credit: Ben Eagan)</figcaption>
+    <figcaption>credit: Ben Eagan</figcaption>
     <br><br>
-    <a href="assets/images/sunset-thom-2.jpg" data-lightbox="lake" data-title="Sunset over the lake (credit: Eric Thom)">
-      <img src="assets/images/sunset-thom-2.jpg" alt="Sunset over the lake (credit: Eric Thom).">
+    <a href="assets/images/sunset-thom-2.jpg" data-lightbox="lake" data-title="credit: Eric Thom">
+      <img src="assets/images/sunset-thom-2.jpg" alt="Sunset over the lake.">
     </a>
-    <figcaption>Sunset over the lake (credit: Eric Thom)</figcaption>
+    <figcaption>credit: Eric Thom</figcaption>
   </figure>
 
 </section>
@@ -108,7 +107,7 @@
   <footer>
     <div class="container">
       <p>&copy; 
-        The LFCA is a non-profit, volunteer organization established in 1976.
+        The FLCA is a non-profit, volunteer organization established in 1976.
         Our goal is to keep members informed and foster discussion on issues affecting Fortescue Lake.
       </p>
     </div>
