--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home • Lake Fortescue Cottagers’ Association</title>
+  <title>Home • Fortescue Lake Cottagers’ Association</title>
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Lightbox2 CSS -->
@@ -19,30 +19,29 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header>
-    <div class="container">
-      <h1>Lake Fortescue Cottagers’ Association</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="events.html">Events</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div>
+    <h1>Fortescue Lake Cottagers’ Association</h1>
+  </div>
+</header>
+
+<nav class="slim-bar">
+  <a href="index.html" class="active">Home</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contact.html">Contact</a>
+  <a href="events.html">Events</a>
+</nav>
 
   <!-- MAIN CONTENT -->
   <main class="container">
 
     <section id="welcome">
-      <h1>Welcome to Lake Fortescue</h1>
+      <h1>Welcome to Fortescue Lake</h1>
 
       <div class="hero-grid">
         <div class="hero-text">
           <p>
-            Lake Fortescue is a spring-fed gem straddling the Haliburton / Peterborough County
+            Fortescue Lake is a spring-fed gem straddling the Haliburton / Peterborough County
             line, just east of Kawartha Highlands Provincial Park.
           </p>
           <p>
@@ -53,10 +52,10 @@
 
         <!-- Right Column: Hero Image -->
         <figure class="hero-image">
-          <a href="assets/images/heron-thom.jpg" data-lightbox="lake" data-title="A blue Heron flies across the lake at dawn (credit: Eric Thom)">
-            <img src="assets/images/heron-thom.jpg" alt="A blue Heron flies across the lake at dawn (credit: Eric Thom)">
+          <a href="assets/images/heron-thom.jpg" data-lightbox="lake" data-title="credit: Eric Thom">
+            <img src="assets/images/heron-thom.jpg" alt="A blue Heron flies across the lake at dawn">
           </a>
-          <figcaption>A blue Heron flies across the lake at dawn (credit: Eric Thom)</figcaption>
+          <figcaption>credit: Eric Thom</figcaption>
         </figure>
       </div>
 
@@ -80,7 +79,7 @@
           The Globe & Mail calls it. “a layered exploration of female friendship, illness and the artistic process”. 
           We call it ‘ours’. Sometimes referred to as ‘the Emily Dickinson of Rosedale’, Fortescue cottager, Writer and Director, Rebeccah Love, has filmed her first feature-length movie using our lake as its backdrop. 
           <br><br>
-          Beautifully shot in and around Lake Fortescue in the late summer/early fall of 2023, her rustic family cottage becomes Ground Zero for this dramatic, heartfelt tale of magical proportions. 
+          Beautifully shot in and around Fortescue Lake in the late summer/early fall of 2023, her rustic family cottage becomes Ground Zero for this dramatic, heartfelt tale of magical proportions. 
           And what a thrill for us to see our lake so lovingly portrayed in its natural setting!
           It’s a must-see reminder of how lucky we are to be surrounded by such an awe-inspiring setting. 
           <br><br>
@@ -93,31 +92,31 @@
         </p>
       </div>
       <figure class="inline-image">
-        <a href="assets/images/fortescue-hero-poster.jpg" data-lightbox="lake" data-title="Poster for Fortescue film (credit: Rebeccah Love)">
+        <a href="assets/images/fortescue-hero-poster.jpg" data-lightbox="lake" data-title="credit: Rebeccah Love">
           <img src="assets/images/fortescue-hero-poster.jpg" alt="Fortescue film poster.">
         </a>
-        <figcaption>Poster for Fortescue film (credit: Rebeccah Love)</figcaption>
+        <figcaption></figcaption>
       </figure>
     </div>
 
     <!-- Brief History -->
     <section id="history">
-      <h1>A Short History of Lake Fortescue</h1>
+      <h1>A Short History of Fortescue Lake</h1>
       <p>
         Logging brought the first wave of development to the Fortescue area in the late 1800s.
         When lumbering declined, early homesteads gave way to seasonal cottages. By the 1950s
         improved roads turned Fortescue into a favourite retreat for families seeking the peace
         and quiet of the Kawarthas. 
         <br><br> 
-        In 1976 the Lake Fortescue Cottagers’ Association (LFCA)
+        In 1976 the Fortescue Lake Cottagers’ Association (FLCA)
         was founded to protect the lake environment and foster community spirit—values. These goals 
         continue to guide us today.
       </p>
     </section>
 
-    <h2>About the Lake Fortescue Cottagers' Association</h2>
+    <h2>About the Fortescue Lake Cottagers' Association</h2>
     <p>
-      The LFCA is a volunteer-run, non-profit group. We:
+      The FLCA is a volunteer-run, non-profit group. We:
     </p>
     <ul>
       <li>Monitor water clarity and overall lake health</li>
@@ -132,7 +131,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <p>&copy; Lake Fortescue Cottagers’ Association — established 1976. Working together to
+      <p>&copy; Fortescue Lake Cottagers’ Association — established 1976. Working together to
          preserve and enjoy our lake for future generations.</p>
     </div>
   </footer>
