Fix weird wording

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="hero-grid">
         <div class="hero-text">
           <p>
-            Fortescue Lake is a spring-fed gem straddling the Haliburton / Peterborough County
-            line, just east of Kawartha Highlands Provincial Park.
+            Fortescue Lake straddles the Haliburton / Peterborough County
+            line, just east of Kawartha Highlands Provincial Park. It is fed by Salerno Creek at its eastern point, and drains on the west into Fortescue Creek.
           </p>
           <p>
             With its clear water, rugged Canadian Shield scenery and friendly cottage community,
@@ -109,7 +109,7 @@
         and quiet of the Kawarthas. 
         <br><br> 
         In 1976 the Fortescue Lake Cottagers’ Association (FLCA)
-        was founded to protect the lake environment and foster community spirit—values. These goals 
+        was founded to protect the lake environment and foster community. These goals 
         continue to guide us today.
       </p>
     </section>
