Remove captions except in lightbox mode

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="hero-text">
           <p>
             Fortescue Lake straddles the Haliburton / Peterborough County
-            line, just east of Kawartha Highlands Provincial Park. It is fed by Salerno Creek at its eastern point, and drains on the west into Fortescue Creek.
+            line, just east of Kawartha Highlands Provincial Park. 
           </p>
           <p>
             With its clear water, rugged Canadian Shield scenery and friendly cottage community,
@@ -55,7 +55,6 @@
           <a href="assets/images/heron-thom.jpg" data-lightbox="lake" data-title="credit: Eric Thom">
             <img src="assets/images/heron-thom.jpg" alt="A blue Heron flies across the lake at dawn">
           </a>
-          <figcaption>credit: Eric Thom</figcaption>
         </figure>
       </div>
 
@@ -65,7 +64,6 @@
           <li><strong>Location: </strong> Fortescue Lake is located on the Haliburton / Peterborough County line, south of Irondale.</li>
           <li><strong>Size & Depth: </strong> Average depth ≈ 38 ft (12 m); maximum ≈ 90 ft (27 m)</li>
           <li><strong>Shoreline: </strong> Irregular, with rocky rubble, submerged timber, and sandy / gravelly points</li>
-          <li><strong>Waterways: </strong> Salerno Creek flows in; Fortescue Creek flows out</li>
           <li><strong>Access: </strong> Public boat launch at the northwest end</li>
           <li><strong>Fisheries Zone: </strong> Provincial Fisheries Management Zone 15</li>
         </ul>
@@ -95,7 +93,6 @@
         <a href="assets/images/fortescue-hero-poster.jpg" data-lightbox="lake" data-title="credit: Rebeccah Love">
           <img src="assets/images/fortescue-hero-poster.jpg" alt="Fortescue film poster.">
         </a>
-        <figcaption></figcaption>
       </figure>
     </div>
 
